# picot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  README.zh.md  ROADMAP.md  biome.json  bun.lockb  package-lock.json  package.json  review-complexity.md  review-correctness.md  review-tests.md  sh-lint-and-format.sh  tsconfig.json
.github/workflows/: release.yml  update-pi-version.yml
.husky/: pre-commit
docs/: AUTO_UPDATER.md  BUILD.md  DESIGN.md  MODULE_SPLIT_PLAN.md  bugfix-folder-picker-freeze.md  custom-drag-interactions.md  engineering-lessons.md  git-panel-architecture.md  merge-main-into-private-features.md  pi-extensions-guide.md  release-macos.md  session-naming.md
docs/adr/: 0001-single-host-native-pi-rpc.md  0002-runtime-identity-and-lifecycle.md  0003-data-ownership-and-remote-security.md
docs/research/: pi-0.80.3-built-in-capability-inventory.md
extensions/: command-policy.test.ts  command-policy.ts  cost-dashboard-data.test.ts  cost-dashboard-data.ts  embedded-server-git-branch.test.ts  embedded-server-lan.test.ts  embedded-server-skills.test.ts  embedded-server.ts  ephemeral-env.ts  ephemeral-runtime-state.test.ts  ephemeral-runtime-state.ts  file-routes.test.ts  file-routes.ts  open-path.test.ts  open-path.ts  path-safety.test.ts  path-safety.ts  pi-chat-setup.ts  pi-chat-telegram-commands.test.ts  picot-bridge.ts  picot-config.test.ts  picot-config.ts  project-trust.test.ts  project-trust.ts  request-access.test.ts  request-access.ts  session-search.test.ts  session-search.ts  tsconfig.json  workspace-info.test.ts  workspace-info.ts
protocol/: picot-core-commands.json
public/: app-context-viz.js  app-router.test.js  app-settings-editors.js  app-settings-editors.test.js  app-settings-toggles.js  app-settings-toggles.test.js  app-startup.test.js  app-updater.js  app-voice-input.js  app-voice-input.test.js  app.js  bootstrap-entry.js  bootstrap.html  chat-history-navigation.js  chat-history-navigation.test.js  chat-scroll-layout.test.js  code-editor.js  code-editor.test.js  codemirror-vendor-entry.js  composer-command-menu.js  composer-image-attachments.js  cost-infobar.js  cost-infobar.test.js  cost.css  cost.html  cost.js  design-system.css  dialogs.js  dialogs.test.js  ephemeral-chat-layout.test.js  ephemeral-chat-runtime.js  ephemeral-chat-runtime.test.js  ephemeral-chat-view.js  ephemeral-chat-view.test.js  extension-ui-host.test.js  file-browser.js  file-browser.test.js  file-language.js  file-language.test.js  file-pdf-preview.js  (+78 more)
public/app/: state.js  transport.js  transport.test.js  updater.js  updater.test.js  voice-input.js  websocket-client.js  websocket-client.test.js
public/components/: chat-settings-panel.css  chat-settings-panel.js  (+5 more)
scripts/: build-extensions.js  build-frontend.js  build.sh  check-rust.sh  check-tauri-permissions.js  fetch-pi-binary.js  install.ps1  install.sh  pi-version.json  release-macos-dmg.sh  release.sh  smoke-extensions.js  smoke-pi-rpc.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: broker_ws.rs  command_policy.rs  ephemeral_registry.rs  host_data.rs  host_router.rs  host_server.rs  main.rs  metadata_store.rs  native_pi_manager.rs  pi_launch.rs  pi_manager.rs  pi_rpc_bridge.rs  remote_auth.rs  runtime_coordinator.rs  settings_store.rs  window_owner.rs
src-tauri/src/pi_launch/: extensions.rs
(+181 files in other folders)
