[package]
name = "picot"
version = "0.3.1-10003"
description = "Pi Agent Desktop - session manager for pi coding agent"
authors = ["Pi Desktop"]
edition = "2021"

[[bin]]
name = "picot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "devtools", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
log = "0.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
futures-util = "0.3"
tokio-tungstenite = "0.24"
percent-encoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
